Too much fixes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -136,6 +136,15 @@ body::-webkit-scrollbar {
   height: 40%;
   width: 100%;
 }
+.card__icon {
+  height: 40%;
+  width: 100%;
+  background-color: rgb(255, 191, 0);
+  text-decoration: none;
+  text-align: center;
+  color: black;
+  padding-top: 2.3rem;
+}
 .card__title {
   font-size: 0.8rem;
   padding: 0 1rem;
@@ -146,6 +155,8 @@ body::-webkit-scrollbar {
   cursor: pointer;
   position: absolute;
   background-color: var(--clr-card-main);
+  width: 2.7rem;
+  padding: 0.3rem;
   border-radius: 50px;
   right: -0.5rem;
   top: -0.5rem;
@@ -335,10 +346,13 @@ body::-webkit-scrollbar {
   border-radius: 50px;
   right: -0.5rem;
   top: -0.5rem;
+  padding: 0.3rem;
   z-index: 1;
+  transition: transform 0.3s;
 }
 .form-playlist__close:hover {
   transform: scale(1.1);
+  background-color: var(--clr-card-main-hover);
 }
 
 .inline-card {
@@ -375,6 +389,27 @@ body::-webkit-scrollbar {
   overflow-y: auto;
   height: var(--main-height);
   position: relative;
+  /* Firefox scrollbar */
+  scrollbar-color: var(--clr-card-main) rgba(0, 0, 0, 0);
+  scrollbar-width: thin;
+  /* width */
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
+}
+.container::-webkit-scrollbar {
+  height: 0.5rem;
+}
+.container::-webkit-scrollbar-track {
+  display: none;
+}
+.container::-webkit-scrollbar-thumb {
+  background-color: var(--clr-card-main);
+  border-radius: 10px;
+  width: 0.5rem;
+}
+.container::-webkit-scrollbar-thumb:hover {
+  background-color: var(--clr-card-main-hover);
 }
 .container__lists {
   display: flex;
