--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -22,6 +22,15 @@
         height: 40%;
         width: 100%;
     }
+    &__icon {
+        height: 40%;
+        width: 100%;
+        background-color: rgb(255, 191, 0);
+        text-decoration: none;
+        text-align: center;
+        color: black;
+        padding-top: 2.3rem;
+    }
     &__title {
         font-size: 0.8rem;
         padding: 0 1rem;
@@ -32,6 +41,8 @@
         cursor: pointer;
         position: absolute;
         background-color: var(--clr-card-main);
+        width: 2.7rem;
+        padding: 0.3rem;
         border-radius: 50px;
         right: -0.5rem;
         top: -0.5rem;
