--- a/sass/components/_formPlaylist.scss
+++ b/sass/components/_formPlaylist.scss
@@ -58,9 +58,12 @@
         border-radius: 50px;
         right: -0.5rem;
         top: -0.5rem;
+        padding: 0.3rem;
         z-index: 1;
+        transition: transform 0.3s; 
         &:hover {
             transform: scale(1.1);
+            background-color: var(--clr-card-main-hover);
         }
     }
 }
